--- a/gnome/po/hu.po
+++ b/gnome/po/hu.po
@@ -7,17 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sflphone\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-02 11:43-0500\n"
-"PO-Revision-Date: 2011-01-07 19:33+0000\n"
+"POT-Creation-Date: 2012-01-04 16:32-0500\n"
+"PO-Revision-Date: 2012-02-10 10:17+0000\n"
 "Last-Translator: Balazs Radak <Unknown>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
-"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-04-01 12:40+0000\n"
-"X-Generator: Launchpad (build 12710)\n"
+"X-Launchpad-Export-Date: 2012-08-09 21:36+0000\n"
+"X-Generator: Launchpad (build 15761)\n"
+"Language: hu\n"
 
 #: ../gnome/src/sflnotify.c:85
 #, c-format
@@ -219,7 +219,7 @@ msgstr "Név"
 
 #: ../gnome/src/config/audioconf.c:554
 msgid "Frequency"
-msgstr "Gyakoriság"
+msgstr "Frekvencia"
 
 #: ../gnome/src/config/audioconf.c:559
 msgid "Bitrate"
@@ -271,7 +271,7 @@ msgstr "Válasszon egy mappát"
 
 #: ../gnome/src/config/audioconf.c:827
 msgid "_Always recording"
-msgstr ""
+msgstr "Mindig rögzítsen"
 
 #: ../gnome/src/config/audioconf.c:834
 msgid "Voice enhancement settings"
@@ -283,7 +283,7 @@ msgstr "Zajszűrő"
 
 #: ../gnome/src/config/audioconf.c:851
 msgid "_Echo Cancellation"
-msgstr ""
+msgstr "Visszhanggátló"
 
 #: ../gnome/src/config/addressbook-config.c:339
 #: ../gnome/src/config/preferencesdialog.c:416
@@ -333,15 +333,15 @@ msgstr "Válaassza ki, melyik Címjegyzéket kívánja használni"
 
 #: ../gnome/src/config/hooks-config.c:149
 msgid "URL Argument"
-msgstr ""
+msgstr "URL Argumentum"
 
 #: ../gnome/src/config/hooks-config.c:157
 msgid "Trigger on specific _SIP header"
-msgstr ""
+msgstr "Speciális SIP Header esetén"
 
 #: ../gnome/src/config/hooks-config.c:166
 msgid "Trigger on _IAX2 URL"
-msgstr ""
+msgstr "Speciális IAX2 URL esetén"
 
 #: ../gnome/src/config/hooks-config.c:171
 msgid "Command to _run"
@@ -349,7 +349,7 @@ msgstr "Parancs futtatása"
 
 #: ../gnome/src/config/hooks-config.c:181
 msgid "Phone number rewriting"
-msgstr "Telefonszám árírása"
+msgstr "Telefonszám átírása"
 
 #: ../gnome/src/config/hooks-config.c:185
 msgid "_Prefix dialed numbers with"
@@ -429,11 +429,10 @@ msgid "Please select one of the following options"
 msgstr "Kérem, válasszon egyet az alábbi lehetősegek közül"
 
 #: ../gnome/src/config/assistant.c:308
-#, fuzzy
 msgid ""
 "Create a free SIP/IAX2 account on sflphone.org \n"
 "(For testing purpose only)"
-msgstr "Ingyenes Fiók (SIP/IAX2) létrehozása az sflphone.org-nál"
+msgstr ""
 
 #: ../gnome/src/config/assistant.c:310
 msgid "Register an existing SIP or IAX2 account"
@@ -563,12 +562,11 @@ msgstr "nap"
 
 #: ../gnome/src/config/preferencesdialog.c:253
 msgid "Instant Messaging"
-msgstr ""
+msgstr "Azonnali üzenetküldés (IM)"
 
 #: ../gnome/src/config/preferencesdialog.c:257
-#, fuzzy
 msgid "Enable instant messaging"
-msgstr "_Csengőhangok engedélyezése"
+msgstr "Azonnali üzenetküldés (IM) engedélyezése"
 
 #: ../gnome/src/config/preferencesdialog.c:377
 msgid "Preferences"
@@ -606,7 +604,7 @@ msgstr "Ismeretlen"
 
 #: ../gnome/src/config/accountconfigdialog.c:334
 msgid "_Proxy"
-msgstr ""
+msgstr "Proxy"
 
 #: ../gnome/src/config/accountconfigdialog.c:352
 msgid "_User-agent"
@@ -638,9 +636,8 @@ msgid "Security"
 msgstr "Biztonság"
 
 #: ../gnome/src/config/accountconfigdialog.c:767
-#, fuzzy
 msgid "Use TLS transport(sips)"
-msgstr "TLS átvitel használata (sips)"
+msgstr "Titkosított átvitel használata [TLS] (sips)"
 
 #: ../gnome/src/config/accountconfigdialog.c:773
 msgid "SRTP key exchange"
@@ -880,7 +877,7 @@ msgstr "Keresés a Bejövő hívások között"
 
 #: ../gnome/src/contacts/searchbar.c:237
 msgid "Search by outgoing call"
-msgstr ""
+msgstr "Keresés kimenő hívás szerint"
 
 #: ../gnome/src/sliders.c:174
 msgid "Speakers volume"
@@ -957,9 +954,9 @@ msgid "Address book"
 msgstr "Címjegyzék"
 
 #: ../gnome/src/uimanager.c:428
-#, fuzzy, c-format
+#, c-format
 msgid "Voicemail(%i)"
-msgstr "Hangposta (%i)"
+msgstr "Hangposta(%i)"
 
 #: ../gnome/src/uimanager.c:507
 msgid "SFLphone is a VoIP client compatible with SIP and IAX2 protocols."
@@ -1019,7 +1016,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:983
 msgid "Send message"
-msgstr ""
+msgstr "Üzenet küldése"
 
 #: ../gnome/src/uimanager.c:986
 msgid "Configuration _Assistant"
@@ -1055,7 +1052,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1003
 msgid "Playback recorded file"
-msgstr ""
+msgstr "Felvétel visszajátszása"
 
 #: ../gnome/src/uimanager.c:1006
 msgid "_Stop playback"
@@ -1063,7 +1060,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1007
 msgid "Stop recorded file playback"
-msgstr ""
+msgstr "Visszajátszás megállíása"
 
 #: ../gnome/src/uimanager.c:1011
 msgid "_Edit"
@@ -1230,29 +1227,3 @@ msgid ""
 "\n"
 "Codecs not found"
 msgstr ""
-
-#, fuzzy
-#~ msgid ""
-#~ "Unable to initialize.\n"
-#~ "Make sure the daemon is running.\n"
-#~ "Error: %s"
-#~ msgstr ""
-#~ "Hiba sz SFLphone szerverhez való csatlakozáskor.\n"
-#~ "Győződjön meg róla, hogy fut a daemon!"
-
-#~ msgid "Codecs"
-#~ msgstr "Kodekek"
-
-#~ msgid "Bandwidth"
-#~ msgstr "Sávszélesség"
-
-#~ msgid "_Echo Suppression"
-#~ msgstr "Visszhanggátló"
-
-#~ msgctxt "NAME OF TRANSLATORS"
-#~ msgid "Your names"
-#~ msgstr " ,Launchpad Contributions:,Balazs Radak"
-
-#~ msgctxt "EMAIL OF TRANSLATORS"
-#~ msgid "Your emails"
-#~ msgstr ",,"
