--- a/gnome/po/pt.po
+++ b/gnome/po/pt.po
@@ -7,18 +7,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-02 11:43-0500\n"
-"PO-Revision-Date: 2010-06-17 19:23+0000\n"
-"Last-Translator: Maxime Chambreuil (http://www.savoirfairelinux.com) <maxime."
-"chambreuil@savoirfairelinux.com>\n"
+"POT-Creation-Date: 2012-01-04 16:32-0500\n"
+"PO-Revision-Date: 2012-01-05 19:59+0000\n"
+"Last-Translator: Maxime Chambreuil (http://www.savoirfairelinux.com) "
+"<maxime.chambreuil@savoirfairelinux.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-04-01 12:41+0000\n"
-"X-Generator: Launchpad (build 12710)\n"
+"X-Launchpad-Export-Date: 2012-08-09 21:36+0000\n"
+"X-Generator: Launchpad (build 15761)\n"
+"Language: \n"
 
 #: ../gnome/src/sflnotify.c:85
 #, c-format
@@ -949,9 +949,9 @@ msgid "Address book"
 msgstr "Livro de endereços"
 
 #: ../gnome/src/uimanager.c:428
-#, fuzzy, c-format
+#, c-format
 msgid "Voicemail(%i)"
-msgstr "Correio de voz (%i)"
+msgstr ""
 
 #: ../gnome/src/uimanager.c:507
 msgid "SFLphone is a VoIP client compatible with SIP and IAX2 protocols."
@@ -1216,173 +1216,3 @@ msgid ""
 "\n"
 "Codecs not found"
 msgstr ""
-
-#~ msgid "Codecs"
-#~ msgstr "Codecs"
-
-#~ msgid "Bandwidth"
-#~ msgstr "Largura de Banda"
-
-#~ msgctxt "account state"
-#~ msgid "Registered"
-#~ msgstr "Registado"
-
-#~ msgctxt "account state"
-#~ msgid "Invalid"
-#~ msgstr "Inválido"
-
-#~ msgctxt "account state"
-#~ msgid "Host unreachable"
-#~ msgstr "A máquina está inacessível"
-
-#~ msgctxt "account state"
-#~ msgid "Authentication Failed"
-#~ msgstr "Autenticação Falhou"
-
-#~ msgctxt "account state"
-#~ msgid "Network unreachable"
-#~ msgstr "A rede está inacessível"
-
-#~ msgctxt "account state"
-#~ msgid "Error"
-#~ msgstr "Erro"
-
-#~ msgid "Email address"
-#~ msgstr "Endereço de correiro electrónico"
-
-#~ msgid "(C) 2009 Savoir-faire Linux"
-#~ msgstr "(C) 2009 Savoir-faire Linux"
-
-#~ msgid "Jérémy Quentin"
-#~ msgstr "Jérémy Quentin"
-
-#~ msgid "Codec"
-#~ msgstr "Codec"
-
-#~ msgid "Incoming call"
-#~ msgstr "Chamada recebida"
-
-#~ msgid "Call history"
-#~ msgstr "Histórico de chamadas"
-
-#~ msgid "Pick up"
-#~ msgstr "Atender"
-
-#~ msgid "Record"
-#~ msgstr "Gravar"
-
-#~ msgid "Transfer"
-#~ msgstr "Transferir"
-
-#~ msgid "Hang up"
-#~ msgstr "Desligar"
-
-#~ msgctxt "Config section"
-#~ msgid "Accounts"
-#~ msgstr "Contas"
-
-#~ msgctxt "Config section"
-#~ msgid "Audio"
-#~ msgstr "Áudio"
-
-#~ msgctxt "Config section"
-#~ msgid "Address Book"
-#~ msgstr "Livro de endereços"
-
-#~ msgctxt "Config section"
-#~ msgid "Recordings"
-#~ msgstr "Gravações"
-
-#~ msgid "Remove the selected account"
-#~ msgstr "Remover a conta seleccionada"
-
-#~ msgctxt "Config section"
-#~ msgid "General"
-#~ msgstr "Geral"
-
-#~ msgid "Remove"
-#~ msgstr "Remover"
-
-#~ msgid "Add a new account"
-#~ msgstr "Adicionar uma nova conta"
-
-#~ msgid "Add"
-#~ msgstr "Adicionar"
-
-#~ msgid "Down"
-#~ msgstr "Descer"
-
-#~ msgid "Up"
-#~ msgstr "Subir"
-
-#~ msgid "IAX"
-#~ msgstr "IAX"
-
-#~ msgid "Apply"
-#~ msgstr "Aplicar"
-
-#~ msgid "ALSA"
-#~ msgstr "ALSA"
-
-#~ msgid "Mobile"
-#~ msgstr "Telemóvel"
-
-#~ msgid "PulseAudio"
-#~ msgstr "PulseAudio"
-
-#~ msgid "Enable notifications"
-#~ msgstr "Activar as notificações"
-
-#~ msgctxt "End of 'Keep my history for at least n days.'"
-#~ msgid "days"
-#~ msgstr "dias"
-
-#~ msgid "Connection"
-#~ msgstr "Connecção"
-
-#~ msgid "History"
-#~ msgstr "Histórico"
-
-#~ msgid "_Call"
-#~ msgstr "_Chamar"
-
-#~ msgid "PulseAudio sound server"
-#~ msgstr "Servidor de som PulseAudio"
-
-#~ msgid "Port"
-#~ msgstr "Porto"
-
-#~ msgid "Stun Server"
-#~ msgstr "Servidor STUN"
-
-#~ msgid "Display"
-#~ msgstr "Exibir"
-
-#~ msgid "Work"
-#~ msgstr "Trabalho"
-
-#~ msgid "SIP Port"
-#~ msgstr "Porta SIP"
-
-#~ msgid "Advanced Settings"
-#~ msgstr "Configurações Avançadas"
-
-#~ msgid "NAT Traversal"
-#~ msgstr "NAT Traversal"
-
-#~ msgctxt "NAME OF TRANSLATORS"
-#~ msgid "Your names"
-#~ msgstr ""
-#~ ",Launchpad Contributions:,Maxime Chambreuil, ,Launchpad Contributions:,"
-#~ "Maxime Chambreuil,Tiago Silva, ,Launchpad Contributions:,Maxime "
-#~ "Chambreuil,Tiago Silva, ,Launchpad Contributions:,Maxime Chambreuil,Tiago "
-#~ "Silva, ,Launchpad Contributions:,Maxime Chambreuil,Tiago, ,Launchpad "
-#~ "Contributions:,Maxime Chambreuil (http://www.savoirfairelinux.com),Tiago "
-#~ "Silva"
-
-#~ msgctxt "EMAIL OF TRANSLATORS"
-#~ msgid "Your emails"
-#~ msgstr ""
-#~ ",,maxime.chambreuil@gmail.com,,,maxime.chambreuil@gmail.com,,,,maxime."
-#~ "chambreuil@gmail.com,,,,maxime.chambreuil@gmail.com,,,,maxime."
-#~ "chambreuil@gmail.com,,,,maxime.chambreuil@savoirfairelinux.com,"
